# src/api/routes/auth/authRoute.js
@@ -2,11 +2,6 @@ const express = require('express');
 const router = express.Router(); 
 const AuthController =  require('./authController'); 
 const {
-    randomNumber,
-  generateOTP,
-  signInTempToken,
-  verifyTempToken,
-  signInToken,
   verifyToken
 } =  require('../../helpers/utility'); 
 
@@ -17,6 +12,7 @@ router.post("/log-in", AuthController.login);
 router.post("/varify-otp", AuthController.verifyOtp);
 router.post("/resend-otp", AuthController.resendOtp);
 router.post("/forget-password", AuthController.forgetPassword);
+router.post("/change-password",verifyToken, AuthController.changePassword);
 router.get('/log-out', verifyToken, AuthController.logout); 
 
 
